# PDF-Pal

./: .gitignore  PDF_Pal.py  README.md  main.py  pyproject.toml  requirements.txt  styles.css
.devcontainer/: devcontainer.json
src/: PDF_Pal.py  config.py  logger.py  schemas.py  src_PDF_Pal.py
src/prompts/: PDF_Pal_prompt.md  map_summary_prompt.md  reduce_summary_prompt.md
tests/: conftest.py  test_config.py  test_extraction.py  test_llm_brain.py  test_rag_memory.py
utils/: chat_engine.py  pdf_processing.py  session_state.py
